--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,31 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.card{
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  perspective: 1000px;
+}
+
+.card.flipped .front{
+  transform: rotateY(0deg);
+}
+
+.card .front, .card .back{
+  width: 100%;
+  height: 100%;
+  position: aboslute;
+  backface-visibility: hidden;
+  border-radius: 0.5rem;
+}
+
+.card .front{
+  background-color: #fff;
+  transform: rotateY(180deg);
+}
+
+.card .back{
+  background-color: #4a5568;
+}
